--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "truffle": "^5.1.57",
     "truffle-flattener": "^1.2.12",
     "truffle-hdwallet-provider": "0.0.6",
-    "web3": "^1.0.0-beta.41"
+    "web3": "^1.8.0"
   },
   "dependencies": {
     "eth-sig-util": "^3.0.1",
