--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "ethereumjs-util": "^6.0.0",
     "ethjs-abi": "^0.2.1",
     "ganache-cli": "^6.12.1",
-    "openzeppelin-solidity": "^2.2.0",
     "solc": "^0.7.5",
     "solidity-coverage": "^0.7.13",
     "solium": "^1.2.4",
@@ -59,6 +58,7 @@
     "web3": "^1.8.0"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.7.3",
     "eth-sig-util": "^3.0.1",
     "ethereumjs-wallet": "^1.0.1"
   }
