--- a/package.json
+++ b/package.json
@@ -37,28 +37,26 @@
   "homepage": "https://github.com/veorq/CMTAT",
   "devDependencies": {
     "@openzeppelin/test-helpers": "^0.5.16",
-    "chai": "^4.2.0",
-    "coveralls": "^3.0.2",
+    "chai": "^4.3.6",
+    "coveralls": "^3.1.1",
     "dotenv": "^6.1.0",
-    "eslint": "^5.13.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint": "^8.23.1",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "ethereumjs-util": "^6.0.0",
+    "eslint-plugin-promise": "^6.0.1",
+    "ethereumjs-util": "^6.2.1",
     "ethjs-abi": "^0.2.1",
-    "ganache-cli": "^6.12.1",
-    "solc": "^0.7.5",
-    "solidity-coverage": "^0.7.13",
-    "solium": "^1.2.4",
-    "truffle": "^5.1.57",
-    "truffle-flattener": "^1.2.12",
+    "solc": "^0.7.6",
+    "solidity-coverage": "^0.8.2",
+    "solium": "^1.2.5",
+    "truffle": "^5.5.31",
+    "truffle-flattener": "^1.6.0",
     "web3": "^1.8.0"
   },
   "dependencies": {
+    "@metamask/eth-sig-util": "^5.0.0",
     "@openzeppelin/contracts": "^4.7.3",
-    "eth-sig-util": "^3.0.1",
-    "ethereumjs-wallet": "^1.0.1"
+    "ethereumjs-wallet": "^1.0.2"
   }
 }
