--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "eslint-plugin-promise": "^6.0.1",
     "ethereumjs-util": "^6.2.1",
     "ethjs-abi": "^0.2.1",
+    "ethlint": "^1.2.5",
     "solc": "^0.7.6",
     "solidity-coverage": "^0.8.2",
-    "solium": "^1.2.5",
     "truffle": "^5.5.31",
     "truffle-flattener": "^1.6.0",
     "web3": "^1.8.0"
