Format and lint the code, update scripts in package.json

--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   ],
   "scripts": {
     "test": "npx truffle test",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "lint:sol": "solium -d .",
-    "lint:sol:fix": "solium -d . --fix",
-    "lint:all": "npm run lint && npm run lint:sol",
-    "lint:all:fix": "npm run lint:fix && npm run lint:sol:fix",
+    "lint:js": "npx eslint test",
+    "lint:js:fix": "npx eslint test --fix",
+    "lint:sol": "npx solium -d contracts",
+    "lint:sol:fix": "npx solium -d contracts --fix",
+    "lint:all": "npx run lint && npm run lint:sol",
+    "lint:all:fix": "npx run lint:fix && npm run lint:sol:fix",
+    "lint:sol:prettier": "npx prettier --write 'contracts/**/*.sol'",
+    "lint:js:prettier": "npx prettier test",
     "console": "truffle console",
     "coverage": "npx solidity-coverage"
   },
@@ -50,6 +52,8 @@
     "ethereumjs-util": "^6.2.1",
     "ethjs-abi": "^0.2.1",
     "ethlint": "^1.2.5",
+    "prettier": "2.7.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.24",
     "solc": "^0.7.6",
     "solidity-coverage": "^0.8.2",
     "truffle": "^5.5.31",
