--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "web3": "^1.8.0"
   },
   "dependencies": {
+    "@openzeppelin/truffle-upgrades": "^1.17.0",
     "eth-sig-util": "^3.0.1",
     "ethereumjs-wallet": "^1.0.2"
   }
