--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "lint:js:prettier": "npx prettier test",
     "console": "truffle console",
     "coverage": "npx solidity-coverage",
-    "uml" : "npx sol2uml class contracts"
+    "uml" : "npx sol2uml class contracts",
+    "test:pause": "npx truffle test test/standard/modules/PauseModule.test.js test/proxy/modules/PauseModule.test.js", 
+    "test:mint": "npx truffle test test/standard/modules/MintModule.test.js test/proxy/modules/MintModule.test.js" 
   },
   "repository": {
     "type": "git",
