--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "lint:js:prettier": "npx prettier test",
     "console": "truffle console",
     "coverage": "npx solidity-coverage",
-    "uml" : "npx sol2uml class contracts -c",
-    "test:pause": "npx truffle test test/standard/modules/PauseModule.test.js test/proxy/modules/PauseModule.test.js", 
+    "uml": "npx sol2uml class contracts -c",
+    "test:pause": "npx truffle test test/standard/modules/PauseModule.test.js test/proxy/modules/PauseModule.test.js",
     "test:mint": "npx truffle test test/standard/modules/MintModule.test.js test/proxy/modules/MintModule.test.js",
     "test:burn": "npx truffle test test/standard/modules/BurnModule.test.js test/proxy/modules/BurnModule.test.js",
     "test:validation": "npx truffle test test/standard/modules/ValidationModule.test.js test/proxy/modules/ValidationModule.test.js",
     "test:enforcement": "npx truffle test test/standard/modules/EnforcementModule.test.js test/proxy/modules/EnforcementModule.test.js",
     "test:authorization": "npx truffle test test/standard/modules/AuthorizationModule.test.js test/proxy/modules/AuthorizationModule.test.js",
-    "test:base": "npx truffle test test/standard/modules/BaseModule.test.js test/proxy/modules/BaseModule.test.js"                         
+    "test:base": "npx truffle test test/standard/modules/BaseModule.test.js test/proxy/modules/BaseModule.test.js"
   },
   "repository": {
     "type": "git",
@@ -64,7 +64,9 @@
     "prettier-plugin-solidity": "^1.0.0-beta.24",
     "sol2uml": "^2.2.5",
     "solc": "^0.7.6",
+    "solgraph": "^1.0.2",
     "solidity-coverage": "^0.8.2",
+    "surya": "^0.4.6",
     "truffle": "^5.5.31",
     "truffle-flattener": "^1.6.0",
     "web3": "^1.8.0"
