Install Hardhat, update doc, simplify truffle-config, ...

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint:sol:prettier": "npx prettier --write 'contracts/**/*.sol'",
     "lint:js:prettier": "npx prettier test",
     "console": "truffle console",
-    "coverage": "npx solidity-coverage",
+    "coverage": "npx hardhat coverage",
+    "docgen": "npx hardhat docgen",
     "uml": "npx sol2uml class contracts -c",
     "uml-i-eip1404": "npx sol2uml class -c contracts/interfaces/IEIP1404",
     "uml-partial": "npx sol2uml class contracts -c -b CMTAT_STANDALONE && npx sol2uml class contracts -c -b CMTAT_PROXY && npx sol2uml class contracts -c -b CMTAT_BASE",
@@ -57,6 +58,8 @@
   },
   "homepage": "https://github.com/CMTA/CMTAT",
   "devDependencies": {
+    "@nomiclabs/hardhat-truffle5": "^2.0.7",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/test-helpers": "^0.5.16",
     "chai": "^4.3.7",
     "coveralls": "^3.1.1",
@@ -77,6 +80,7 @@
     "solc": "^0.8.19",
     "solgraph": "^1.0.2",
     "solidity-coverage": "^0.8.2",
+    "solidity-docgen": "^0.6.0-beta.35",
     "surya": "^0.4.6",
     "truffle": "^5.8.3",
     "truffle-contract-size": "^2.0.1",
