--- a/package.json
+++ b/package.json
@@ -21,22 +21,22 @@
     "docgen": "npx hardhat docgen",
     "uml": "npx sol2uml class contracts -c",
     "uml-i-eip1404": "npx sol2uml class -c contracts/interfaces/IEIP1404",
-    "uml-partial": "npx sol2uml class contracts -c -b CMTAT_STANDALONE && npx sol2uml class contracts -c -b CMTAT_PROXY && npx sol2uml class contracts -c -b CMTAT_BASE",
+    "uml-partial": "npx sol2uml class contracts -c -b CMTAT_PROXY && npx sol2uml class contracts -c -b CMTAT_BASE",
     "uml-modules-mandatory": "npx sol2uml class contracts -c -b BaseModule && npx sol2uml class contracts -c -b BurnModule && npx sol2uml class contracts -c -b EnforcementModule && npx sol2uml class contracts -c -b ERC20BaseModule && npx sol2uml class contracts -c -b MintModule && npx sol2uml class contracts -c -b PauseModule",
     "uml-modules-optional": "npx sol2uml class contracts -c -b DebtBaseModule && npx sol2uml class contracts -c -b CreditEventsModule  && npx sol2uml class contracts -c -b MetaTxModule && npx sol2uml class contracts -c -b ValidationModule",
     "uml-modules-security": "npx sol2uml class contracts -c -b AuthorizationModule && npx sol2uml class contracts -c -b OnlyDelegateCallModule",
     "uml-mocks": "npx sol2uml class -c contracts/mocks/RuleEngine",
     "size": "npx truffle run contract-size",
-    "test:pause": "npx truffle test test/standard/modules/PauseModule.test.js test/proxy/modules/PauseModule.test.js",
-    "test:mint": "npx truffle test test/standard/modules/MintModule.test.js test/proxy/modules/MintModule.test.js",
-    "test:burn": "npx truffle test test/standard/modules/BurnModule.test.js test/proxy/modules/BurnModule.test.js",
-    "test:validation": "npx truffle test test/standard/modules/ValidationModule/ValidationModule.test.js test/proxy/modules/ValidationModule/ValidationModule.test.js test/standard/modules/ValidationModule/ValidationModuleConstructor.test.js test/proxy/modules/ValidationModule/ValidationModuleConstructor.test.js test/standard/modules/ValidationModule/ValidationModuleSetRuleEngine.test.js test/proxy/modules/ValidationModule/ValidationModuleSetRuleEngine.test.js",
-    "test:enforcement": "npx truffle test test/standard/modules/EnforcementModule.test.js test/proxy/modules/EnforcementModule.test.js",
-    "test:authorization": "npx truffle test test/standard/modules/AuthorizationModule/AuthorizationModule.test.js test/proxy/modules/AuthorizationModule/AuthorizationModule.test.js test/standard/modules/AuthorizationModule/TransferAdminship.test.js test/proxy/modules/AuthorizationModule/TransferAdminship.test.js",
-    "test:base": "npx truffle test test/standard/modules/BaseModule.test.js test/proxy/modules/BaseModule.test.js",
-    "test:erc20Base": "npx truffle test test/standard/modules/ERC20BaseModule.test.js test/proxy/modules/ERC20BaseModule.test.js",
-    "test:debt": "npx truffle test test/standard/modules/DebtModule.test.js test/proxy/modules/DebtModule.test.js",
-    "test:creditEvents": "npx truffle test test/standard/modules/CreditEventsModule.test.js test/proxy/modules/CreditEventsModule.test.js",
+    "test:pause": "npx truffle test test/proxy/modules/PauseModule.test.js",
+    "test:mint": "npx truffle test test/proxy/modules/MintModule.test.js",
+    "test:burn": "npx truffle test test/proxy/modules/BurnModule.test.js",
+    "test:validation": "npx truffle test test/proxy/modules/ValidationModule/ValidationModule.test.js test/proxy/modules/ValidationModule/ValidationModuleConstructor.test.js test/proxy/modules/ValidationModule/ValidationModuleSetRuleEngine.test.js",
+    "test:enforcement": "npx truffle test test/proxy/modules/EnforcementModule.test.js",
+    "test:authorization": "npx truffle test test/proxy/modules/AuthorizationModule/AuthorizationModule.test.js test/proxy/modules/AuthorizationModule/TransferAdminship.test.js",
+    "test:base": "npx truffle test test/proxy/modules/BaseModule.test.js",
+    "test:erc20Base": "npx truffle test test/proxy/modules/ERC20BaseModule.test.js",
+    "test:debt": "npx truffle test test/proxy/modules/DebtModule.test.js",
+    "test:creditEvents": "npx truffle test test/proxy/modules/CreditEventsModule.test.js",
     "test:deployment": "npx truffle test test/deployment/deployment.test.js"
   },
   "repository": {
