--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "uml-i-eip1404": "npx sol2uml class -c contracts/interfaces/IEIP1404",
     "uml-partial": "npx sol2uml class contracts -c -b CMTAT_PROXY && npx sol2uml class contracts -c -b CMTAT_BASE",
     "uml-modules-mandatory": "npx sol2uml class contracts -c -b BaseModule && npx sol2uml class contracts -c -b BurnModule && npx sol2uml class contracts -c -b EnforcementModule && npx sol2uml class contracts -c -b ERC20BaseModule && npx sol2uml class contracts -c -b MintModule && npx sol2uml class contracts -c -b PauseModule",
-    "uml-modules-optional": "npx sol2uml class contracts -c -b DebtBaseModule && npx sol2uml class contracts -c -b CreditEventsModule  && npx sol2uml class contracts -c -b ValidationModule",
+    "uml-modules-optional": "npx sol2uml class contracts -c -b ValidationModule",
     "uml-modules-security": "npx sol2uml class contracts -c -b AuthorizationModule && npx sol2uml class contracts -c -b OnlyDelegateCallModule",
     "uml-mocks": "npx sol2uml class -c contracts/mocks/RuleEngine",
     "size": "npx truffle run contract-size",
@@ -35,8 +35,6 @@
     "test:authorization": "npx truffle test test/proxy/modules/AuthorizationModule/AuthorizationModule.test.js test/proxy/modules/AuthorizationModule/TransferAdminship.test.js",
     "test:base": "npx truffle test test/proxy/modules/BaseModule.test.js",
     "test:erc20Base": "npx truffle test test/proxy/modules/ERC20BaseModule.test.js",
-    "test:debt": "npx truffle test test/proxy/modules/DebtModule.test.js",
-    "test:creditEvents": "npx truffle test test/proxy/modules/CreditEventsModule.test.js",
     "test:deployment": "npx truffle test test/deployment/deployment.test.js"
   },
   "repository": {
