--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "uml-partial": "npx sol2uml class contracts -c -b CMTAT_PROXY && npx sol2uml class contracts -c -b CMTAT_BASE",
     "uml-modules-mandatory": "npx sol2uml class contracts -c -b BaseModule && npx sol2uml class contracts -c -b BurnModule && npx sol2uml class contracts -c -b ERC20BaseModule && npx sol2uml class contracts -c -b MintModule && npx sol2uml class contracts -c -b PauseModule",
     "uml-modules-optional": "npx sol2uml class contracts -c -b ValidationModule",
-    "uml-modules-security": "npx sol2uml class contracts -c -b AuthorizationModule && npx sol2uml class contracts -c -b OnlyDelegateCallModule",
+    "uml-modules-security": "npx sol2uml class contracts -c -b AuthorizationModule",
     "uml-mocks": "npx sol2uml class -c contracts/mocks/RuleEngine",
     "size": "npx truffle run contract-size",
     "test:pause": "npx truffle test test/proxy/modules/PauseModule.test.js",
@@ -71,6 +71,7 @@
     "ethereumjs-util": "^7.1.5",
     "ethjs-abi": "^0.2.1",
     "ethlint": "^1.2.5",
+    "hardhat": "^2.14.1",
     "prettier": "^2.8.7",
     "prettier-plugin-solidity": "^1.1.3",
     "sol2uml": "^2.5.4",
@@ -79,14 +80,14 @@
     "solidity-coverage": "^0.8.2",
     "solidity-docgen": "^0.6.0-beta.35",
     "surya": "^0.4.6",
-    "truffle": "^5.8.3",
+    "truffle": "^5.9.2",
     "truffle-contract-size": "^2.0.1",
     "truffle-flattener": "^1.6.0",
-    "web3": "^1.9.0"
+    "web3": "^1.10.0"
   },
   "dependencies": {
-    "@openzeppelin/truffle-upgrades": "^1.17.1",
-    "eth-sig-util": "^3.0.1",
+    "@metamask/eth-sig-util": "^5.1.0",
+    "@openzeppelin/truffle-upgrades": "^1.19.0",
     "ethereumjs-wallet": "^1.0.2"
   }
 }
