--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "lint:js:fix": "npx eslint test --fix",
     "lint:sol": "npx solium -d contracts",
     "lint:sol:fix": "npx solium -d contracts --fix",
-    "lint:all": "npx run lint && npm run lint:sol",
-    "lint:all:fix": "npx run lint:fix && npm run lint:sol:fix",
+    "lint:all": "npx run lint && npx run lint:sol",
+    "lint:all:fix": "npm run-script lint:js:fix && npm run-script lint:sol:fix",
     "lint:sol:prettier": "npx prettier --write 'contracts/**/*.sol'",
     "lint:js:prettier": "npx prettier test",
+    "lint:all:prettier": "npm run-script lint:js:prettier && npm run-script lint:sol:prettier",
     "console": "truffle console",
     "coverage": "npx hardhat coverage",
     "docgen": "npx hardhat docgen",
