Format the code

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "lint:all": "npx run lint && npx run lint:sol",
     "lint:all:fix": "npm run-script lint:js:fix && npm run-script lint:sol:fix",
     "lint:sol:prettier": "npx prettier --write 'contracts/**/*.sol'",
-    "lint:js:prettier": "npx prettier test",
-    "lint:all:prettier": "npm run-script lint:js:prettier && npm run-script lint:sol:prettier",
+    "lint:js:prettier": "npx prettier --write test",
+    "lint:all:prettier": "npm run-script lint:js:prettier && lint:js:fix && npm run-script lint:sol:prettier",
     "console": "truffle console",
     "coverage": "npx hardhat coverage",
     "docgen": "npx hardhat docgen",
