--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "ethereumjs-util": "^7.1.5",
     "ethjs-abi": "^0.2.1",
     "ethlint": "^1.2.5",
+    "hardhat-gas-reporter": "^1.0.9",
     "keccak256": "^1.0.6",
     "prettier": "^2.8.7",
     "prettier-plugin-solidity": "^1.1.3",
