--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "uml": "npx sol2uml class contracts -c",
     "uml-i-eip1404": "npx sol2uml class -c contracts/interfaces/IEIP1404",
     "uml-partial": "npx sol2uml class contracts -c -b CMTAT_STANDALONE && npx sol2uml class contracts -c -b CMTAT_PROXY && npx sol2uml class contracts -c -b CMTAT_BASE",
-    "uml-modules-mandatory": "npx sol2uml class contracts -c -b BaseModule && npx sol2uml class contracts -c -b BurnModule && npx sol2uml class contracts -c -b EnforcementModule && npx sol2uml class contracts -c -b ERC20BaseModule && npx sol2uml class contracts -c -b MintModule && npx sol2uml class contracts -c -b PauseModule",
+    "uml-modules-mandatory": "npx sol2uml class contracts -c -b BaseModule && npx sol2uml class contracts -c -b BurnModule && npx sol2uml class contracts -c -b EnforcementModule && npx sol2uml class contracts -c -b ERC20BaseModule && npx sol2uml class contracts -c -b MintModule",
     "uml-modules-optional": "npx sol2uml class contracts -c -b DebtBaseModule && npx sol2uml class contracts -c -b CreditEventsModule  && npx sol2uml class contracts -c -b MetaTxModule && npx sol2uml class contracts -c -b SnapshotModule && npx sol2uml class contracts -c -b ValidationModule",
-    "uml-modules-security": "npx sol2uml class contracts -c -b AuthorizationModule && npx sol2uml class contracts -c -b OnlyDelegateCallModule",
+    "uml-modules-security": "npx sol2uml class contracts -c -b AuthorizationModule && npx sol2uml class contracts -c -b PauseModule",
     "uml-mocks": "npx sol2uml class -c contracts/mocks/RuleEngine",
     "size": "npx truffle run contract-size",
     "test:pause": "npx truffle test test/standard/modules/PauseModule.test.js test/proxy/modules/PauseModule.test.js",
@@ -39,7 +39,7 @@
     "test:debt": "npx truffle test test/standard/modules/DebtModule.test.js test/proxy/modules/DebtModule.test.js",
     "test:creditEvents": "npx truffle test test/standard/modules/CreditEventsModule.test.js test/proxy/modules/CreditEventsModule.test.js",
     "test:deployment": "npx truffle test test/deployment/deployment.test.js",
-    "test:proxy": "npx truffle test test/proxy/general/KillImplementation.test.js test/proxy/general/Proxy.test.js test/proxy/general/UpgradeProxy.test.js",
+    "test:proxy": "npx truffle test test/proxy/general/Proxy.test.js test/proxy/general/UpgradeProxy.test.js",
     "test:metaTx": "npx truffle test test/standard/modules/MetaTxModule.test.js test/proxy/modules/MetaTxModule.test.js",
     "test:hardhat:burn": "npx hardhat test test/standard/modules/BurnModule.test.js test/proxy/modules/BurnModule.test.js",
     "test:hardhat:mint": "npx hardhat test test/standard/modules/MintModule.test.js test/proxy/modules/MintModule.test.js",
@@ -53,7 +53,7 @@
     "test:hardhat:snapshot": "npx hardhat test test/standard/modules/SnapshotModule.test.js test/proxy/modules/SnapshotModule.test.js",
     "test:hardhat:enforcement": "npx hardhat test test/standard/modules/EnforcementModule.test.js test/proxy/modules/EnforcementModule.test.js",
     "test:hardhat:metaTx": "npx hardhat test test/standard/modules/MetaTxModule.test.js test/proxy/modules/MetaTxModule.test.js",
-    "test:hardhat:proxy": "npx hardhat test test/proxy/general/KillImplementation.test.js test/proxy/general/Proxy.test.js test/proxy/general/UpgradeProxy.test.js",
+    "test:hardhat:proxy": "npx hardhat test test/proxy/general/Proxy.test.js test/proxy/general/UpgradeProxy.test.js",
     "test:hardhat:deployment": "npx hardhat test test/deployment/deployment.test.js"
   },
   "repository": {
