--- a/package.json
+++ b/package.json
@@ -77,7 +77,6 @@
   },
   "homepage": "https://github.com/CMTA/CMTAT",
   "devDependencies": {
-    "@nomicfoundation/hardhat-ethers": "^3.0.4",
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/hardhat-upgrades": "^2.1.1",
@@ -98,7 +97,9 @@
     "ethlint": "^1.2.5",
     "hardhat-contract-sizer": "^2.10.0",
     "hardhat-gas-reporter": "^1.0.9",
+    "install": "^0.13.0",
     "keccak256": "^1.0.6",
+    "npm": "^10.1.0",
     "prettier": "^2.8.7",
     "prettier-plugin-solidity": "^1.1.3",
     "sol2uml": "^2.5.4",
