--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "console": "truffle console",
     "coverage": "npx hardhat coverage",
     "docgen": "npx hardhat docgen",
-    "uml-all": "npm run-script uml-partial && npm run-script uml-i-eip1404 && npm run-script uml-modules-core && npm run-script uml-modules-extensions && npm run-script uml-modules-security && npm run-script uml-mocks",
+    "uml-all": "npm run-script uml-partial && npm run-script uml-i-draft-erc1404 && npm run-script uml-modules-core && npm run-script uml-modules-extensions && npm run-script uml-modules-security && npm run-script uml-mocks",
     "uml": "npx sol2uml class contracts -c",
-    "uml-i-eip1404": "npx sol2uml class contracts -c -b IEIP1404Wrapper",
+    "uml-i-draft-erc1404": "npx sol2uml class contracts -c -b IERC1404Wrapper",
     "uml-partial": "npx sol2uml class contracts  -c --depth=1 -b  CMTAT_STANDALONE && npx sol2uml class contracts -c --depth=1 -b  CMTAT_PROXY && npx sol2uml class contracts -c -b CMTAT_BASE",
     "uml-modules-core": "npx sol2uml class contracts -c -b BaseModule && npx sol2uml class contracts -c -b ERC20BurnModule && npx sol2uml class contracts -c -b EnforcementModule && npx sol2uml class contracts -c -b ERC20BaseModule && npx sol2uml class contracts -c -b ERC20MintModule",
     "uml-modules-extensions": "npx sol2uml class contracts -c -b DebtBaseModule && npx sol2uml class contracts -c -b CreditEventsModule  && npx sol2uml class contracts -c -b MetaTxModule && npx sol2uml class contracts -c -b ERC20SnapshotModule && npx sol2uml class contracts -c -b ValidationModule",
