--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "web3": "^1.9.0"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^5.0.0",
     "@openzeppelin/truffle-upgrades": "^1.17.1",
     "eth-sig-util": "^3.0.1",
     "ethereumjs-wallet": "^1.0.2"
