refactor: 🪖 migrate from truffle to hardhat
Remove truffle-config.js
Remove migrations/1_deploy_contracts.js
Add scripts/1_deploy_contracts.js
Update hardhat.config.js with network configurations
Update ESLint configuration, environment, and globals
Update devDependencies in package.json
Update deployment.test.js with new deployment logic
Update .env.example with private key and node URLs

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,8 +2,17 @@ env:
   browser: true
   commonjs: true
   es2021: true
+  node: true
+  mocha: true
+
 extends: standard
+
+globals:
+  expect: true
+
 overrides: []
+
 parserOptions:
   ecmaVersion: latest
+
 rules: {}
