refactor: 🪖 migrate from truffle to hardhat
- Remove truffle-config.js
- Remove migrations/1_deploy_contracts.js
- Add scripts/1_deploy_contracts.js
- Update hardhat.config.js with network configurations
- Update ESLint configuration, environment, and globals
- Update devDependencies in package.json
- Update deployment.test.js with new deployment logic
- Update .env.example with private key and node URLs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,11 +24,8 @@ jobs:
       - name: Checkout submodules
         run: git submodule update --init --recursive
 
-      - name: Install Truffle
-        run: npm install -g truffle
-
       - name: Install Project Dependencies
         run: npm install
 
-      - name: Run Truffle Test
-        run: npm t
+      - name: Run Hardhat Tests
+        run: npx hardhat coverage
