--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,8 +2,14 @@ env:
   browser: true
   commonjs: true
   es2021: true
+  node: true
+  mocha: true
+
 extends: standard
+
 overrides: []
+
 parserOptions:
   ecmaVersion: latest
+
 rules: {}
