--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,11 @@
-name: Truffle CI
+name: CI
 
 on:
   push:
     branches: [dev, master, main, wrapped-assets]
   pull_request:
     branches: [dev, master, main, wrapped-assets]
+  workflow_dispatch:
 
 jobs:
   build:
