Migrate from truffle to hardhat - Close #AM-2912 (#16)

--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "test"
   ],
   "scripts": {
-    "test": "npx truffle test",
-    "lint:js": "npx eslint test",
-    "lint:js:fix": "npx eslint test --fix",
-    "lint:sol": "npx solium -d contracts",
-    "lint:sol:fix": "npx solium -d contracts --fix",
-    "lint:all": "npx run lint:js && npm run lint:sol",
-    "lint:all:fix": "npx run lint:js:fix && npm run lint:sol:fix",
+    "test": "npx hardhat test",
+    "lint:js": "npx eslint .",
+    "lint:js:fix": "npx eslint . --fix",
+    "lint:sol": "npx solhint 'contracts/**/*.sol'",
+    "lint:sol:fix": "npx solhint 'contracts/**/*.sol' --fix",
+    "lint:all": "npm run lint:js && npm run lint:sol",
+    "lint:all:fix": "npm run lint:js:fix && npm run lint:sol:fix",
     "lint:sol:prettier": "npx prettier --write 'contracts/**/*.sol'",
-    "lint:js:prettier": "npx prettier test",
-    "console": "truffle console",
+    "lint:js:prettier": "npx prettier --write '**/*.js'",
+    "console": "npx hardhat console",
     "coverage": "npx hardhat coverage",
     "docgen": "npx hardhat docgen",
     "uml": "npx sol2uml class contracts -c",
@@ -24,14 +24,14 @@
     "uml-modules-mandatory": "npx sol2uml class contracts -c -b BaseModule && npx sol2uml class contracts -c -b BurnModule && npx sol2uml class contracts -c -b ERC20BaseModule && npx sol2uml class contracts -c -b MintModule && npx sol2uml class contracts -c -b PauseModule",
     "uml-modules-security": "npx sol2uml class contracts -c -b AuthorizationModule",
     "uml-mocks": "npx sol2uml class -c contracts/mocks/RuleEngine",
-    "size": "npx truffle run contract-size",
-    "test:pause": "npx truffle test test/proxy/modules/PauseModule.test.js",
-    "test:mint": "npx truffle test test/proxy/modules/MintModule.test.js",
-    "test:burn": "npx truffle test test/proxy/modules/BurnModule.test.js",
-    "test:authorization": "npx truffle test test/proxy/modules/AuthorizationModule/AuthorizationModule.test.js test/proxy/modules/AuthorizationModule/TransferAdminship.test.js",
-    "test:base": "npx truffle test test/proxy/modules/BaseModule.test.js",
-    "test:erc20Base": "npx truffle test test/proxy/modules/ERC20BaseModule.test.js",
-    "test:deployment": "npx truffle test test/deployment/deployment.test.js"
+    "size": "npx hardhat size-contracts",
+    "test:pause": "npx hardhat test test/proxy/modules/PauseModule.test.js",
+    "test:mint": "npx hardhat test test/proxy/modules/MintModule.test.js",
+    "test:burn": "npx hardhat test test/proxy/modules/BurnModule.test.js",
+    "test:authorization": "npx hardhat test test/proxy/modules/AuthorizationModule/AuthorizationModule.test.js test/proxy/modules/AuthorizationModule/TransferAdminship.test.js",
+    "test:base": "npx hardhat test test/proxy/modules/BaseModule.test.js",
+    "test:erc20Base": "npx hardhat test test/proxy/modules/ERC20BaseModule.test.js",
+    "test:deployment": "npx hardhat test test/deployment/deployment.test.js"
   },
   "repository": {
     "type": "git",
@@ -52,15 +52,17 @@
   },
   "homepage": "https://github.com/CMTA/CMTAT",
   "devDependencies": {
-    "@nomiclabs/hardhat-truffle5": "^2.0.7",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.2",
+    "@nomicfoundation/hardhat-verify": "^1.1.1",
     "@nomiclabs/hardhat-web3": "^2.0.0",
-    "@openzeppelin/test-helpers": "^0.5.16",
+    "@openzeppelin/hardhat-upgrades": "^2.4.3",
     "chai": "^4.3.7",
     "coveralls": "^3.1.1",
     "dotenv": "^16.0.3",
     "eslint": "^8.38.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-mocha": "^10.2.0",
     "eslint-plugin-mocha-no-only": "^1.1.1",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-node": "^11.1.0",
@@ -68,24 +70,22 @@
     "ethereumjs-util": "^7.1.5",
     "ethjs-abi": "^0.2.1",
     "ethlint": "^1.2.5",
-    "hardhat": "^2.14.1",
-    "prettier": "^2.8.7",
-    "prettier-plugin-solidity": "^1.1.3",
+    "hardhat": "^2.19.1",
+    "hardhat-contract-sizer": "^2.10.0",
+    "hardhat-gas-reporter": "^1.0.9",
+    "prettier": "^3.1.0",
+    "prettier-plugin-solidity": "^1.2.0",
     "sol2uml": "^2.5.4",
     "solc": "^0.8.19",
     "solgraph": "^1.0.2",
+    "solhint-community": "^3.7.0",
+    "solhint-plugin-prettier": "^0.1.0",
     "solidity-coverage": "^0.8.2",
     "solidity-docgen": "^0.6.0-beta.35",
     "surya": "^0.4.6",
-    "truffle": "^5.9.2",
-    "truffle-contract-size": "^2.0.1",
-    "truffle-flattener": "^1.6.0",
-    "truffle-plugin-verify": "^0.6.3",
     "web3": "^1.10.0"
   },
   "dependencies": {
-    "@metamask/eth-sig-util": "^5.1.0",
-    "@openzeppelin/truffle-upgrades": "^1.19.0",
-    "@truffle/hdwallet-provider": "^1.4.0"
+    "@metamask/eth-sig-util": "^5.1.0"
   }
 }
