--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "openzeppelin-contracts-upgradeable"]
 	path = openzeppelin-contracts-upgradeable
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
+[submodule "ccip"]
+	path = ccip
+	url = org-25111032@github.com:smartcontractkit/ccip.git
