--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,8 @@ on:
 
 env:
   MAINNET_NODE: ${{ secrets.MAINNET_NODE }}
-  GOERLI_NODE: ${{ secrets.GOERLI_NODE }}
   POLYGON_NODE: ${{ secrets.POLYGON_NODE }}
+  HOLESKY_NODE: ${{ secrets.HOLESKY_NODE }}
   ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
   PRIVATE_KEY: ${{ secrets.DUMMY_PK }}
 
