Improve transparent proxy factory with create2

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "test:hardhat:snapshot": "npx hardhat test test/standard/modules/ERC20SnapshotModule.test.js test/proxy/modules/ERC20SnapshotModule.test.js",
     "test:hardhat:enforcement": "npx hardhat test test/standard/modules/EnforcementModule.test.js test/proxy/modules/EnforcementModule.test.js",
     "test:hardhat:metaTx": "npx hardhat test test/standard/modules/MetaTxModule.test.js test/proxy/modules/MetaTxModule.test.js",
-    "test:hardhat:proxy": "npx hardhat test test/proxy/general/Beacon.test.js test/proxy/general/Transparent.test.js test/proxy/general/Proxy.test.js test/proxy/general/UpgradeProxy.test.js",
+    "test:hardhat:proxy": "npx hardhat test test/proxy/general/factory/Beacon.test.js test/proxy/general/factory/Transparent.test.js test/proxy/general/factory/TransparentSalt.test.js test/proxy/general/Proxy.test.js test/proxy/general/UpgradeProxy.test.js",
     "test:hardhat:deployment": "npx hardhat test test/deployment/deployment.test.js"
   },
   "repository": {
