--- a/package.json
+++ b/package.json
@@ -99,6 +99,6 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "5.0.2",
-    "@openzeppelin/contracts-upgradeable": "^5.0.2"
+    "@openzeppelin/contracts-upgradeable": "5.0.2"
   }
 }
